--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -19,37 +19,34 @@
         android:gravity="center"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Question X of N" />
+        android:text="Question X of N"
+        android:textAlignment="center" />
 
+
+    <TextView
+        android:layout_width="318dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/testText"
+        android:textSize="14sp"
+        android:textAlignment="textStart" />
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="340dp" />
+        android:layout_height="283dp"
+        android:id="@+id/testListView" />
 
-    <TableLayout android:id="@+id/buttonTableLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:stretchColumns="0,1,2"><![CDATA[
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-
-
-
-
-        ]]>
-
-    </TableLayout>
 
     <TextView android:id="@+id/resultTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:textStyle="bold"
-        android:text="Sample Text"/>
+        android:text="Sample Text"
+        android:layout_weight="0.20"
+        android:fontFamily="serif"
+        android:typeface="sans"
+        android:textSize="18sp"
+        android:textColor="?attr/actionMenuTextColor" />
 
     <Button
         android:text="Закончить тест"
